<resources>
    <string name="app_name">Expenses Tracker</string>
    <string name="add_record">Add Record</string>
    <string name="Rs">\u20B9</string>
    <string name="rs">\u20A8</string>
    <string name="description">Description</string>
    <string name="enter_amount">Enter The Amount</string>
    <string name="earned">Earned</string>
    <string name="spent">Spent</string>
    <string name="cancel">Cancel</string>
    <string name="enter_some_details">Enter Some Details</string>
    <string name="add">Add</string>
    <string name="dummy_date">08/11/2000</string>
    <string name="dummy_time">12:40 AM</string>
    <string name="filter">Filter</string>
    <string name="search_records_between_two_dates">Search Records Between Two Dates</string>
    <string name="menu_button">Menu Button</string>
    <string name="menu_item_0">Filter Using Date</string>
    <string name="menu_item_1">Delete All Records</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
</resources>