<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/pop_up_back"
    android:paddingStart="10dp"
    android:paddingTop="20dp"
    android:paddingEnd="10dp"
    android:paddingBottom="20dp"
    tools:context=".AddOrUpdate">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/rsSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/Rs"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@drawable/amount_back"
            android:elevation="10dp"
            android:hint="@string/enter_amount"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="5dp"
            android:lines="1"
            android:maxLines="1"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dateTimeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="fill_horizontal"
        android:orientation="horizontal"
        android:padding="3dp"
        app:flow_horizontalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topLayout">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:inputType="date"
            android:padding="3dp"
            android:text="08/11/2000"
            android:textSize="18sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:inputType="time"
            android:padding="3dp"
            android:text="12:40 AM"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:text="@string/earned"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:text="@string/spent"
                android:textAlignment="center"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <EditText
        android:hint="@string/enter_some_details"
        android:id="@+id/descTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/amount_back"
        android:elevation="10sp"
        android:lines="1"
        android:maxLines="3"
        android:padding="5dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateTimeLayout"
        android:importantForAutofill="no"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descTxt">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_red"
            android:padding="5dp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="#FF0000"
            android:textSize="15sp" />

        <Space
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:layout_width="130dp"

            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_green"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:text="Add"
            android:textAlignment="center"
            android:textColor="#00FF00"
            android:textSize="15sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>